* SVN *

* tweak mephisto_init to support the new ActionController::Dispatcher class.  [Rob Anderton]

* Don't generate an article event for unversioned changes. [Marcus Brito]

* Switch to will_paginate plugin [Mislav]

* unit test fixes for those not using mysql or psql [Mislav]

* add comment moderation links to the overview [court3nay]

* convert tests to use test/spec instead of simply bdd [Chris McGrath]

* move xmlrpc stuff to plugin.  rails doesn't include AWS anymore.  May need some simple autodetection so the plugin just prints a warning if AWS isn't found.

* turn off session for mephisto controller.  sorry, caused way too many problems.

* fix url_for calls with symbolized controllers/actions.

* Fix controllers so include_into works with them.

* Change plugin class/module to Mephisto::Plugin and Mephisto::Plugins.  Sorry for the breakage (still technically experimental!)

* Fix admin overview date timezone.  [Ben Wyrosdick]

* Extract template rendering code to separate handler class, add support for alternate template handlers. [Pascal Belloncle]

* Add {{ article.next }} and {{ article | next: section }} for paginating articles [Pascal Belloncle]

* [converters] initial movable type support [sd]

* [converters] use no filter for wordpress articles

* Small bug fixes
  - show correct asset thumbnail url
  - assert with correct named asset resource route
  - add missing fixtures for About Section Feed Test
  - update asset labeling tests to reflect current behavior

* RESTRICT hyphens as a possible separator for permalink styles. [Chris Wanstrath]

* Initial article/asset assignment support.  Perfect for podcasting.  

* Raise MissingThemesError if Site#theme is nil

* RIP: Site#search_layout

* Add link_to_search_result filter that uses either a paged or blog permalink, depending on the search section.

* Allow search page to take ?s parameter to specify section path.  

  * nil (default)     - all sections
  * '' (empty string) - home section